docs/assets/css/style.scss
---
---
@import "{{ site.theme }}";

html {
  scroll-behavior: smooth;
}

.page-header2 {
  color: $header-heading-color;
  text-align: left;
  background-color: #000050;
  padding: 0.5rem 1rem !important;
  width: 100%;
  height: 3.5rem;
  position: fixed;
  top: 0;

  .project-name {
    font-size: 1.4rem;
    display: inline;
    margin: 0;
    margin-left: 1rem;
  }
}

#tagline.main-content {
  padding-top: 3.75rem;
}

#intro.main-content {
  max-width: none;
  margin: 0;
  padding: 2rem 10rem;
  padding-top: 0;
}

#highlights.main-content {
  max-width: none;
  margin: 0;
  padding: 2rem 10rem;
  padding-top: 0;
  background-color: rgb(245, 245, 245);
}

#research.main-content {
  max-width: none;
  margin: 0;
  padding: 2rem 10rem;
  padding-top: 0;

  .section-container.research-lines {
    border-radius: 2rem;
    background-color:rgb(245, 245, 245);
    margin-bottom: 0;
  }

  .section-text {
    width: 45%;

    h3.section-subtitle {
      font-size: 1.8rem;
      font-weight: bolder;
      color: #000050;
      margin-bottom: 0;
    }

    h3.software-subtitle {
        margin-bottom: -0.5rem;
    }

    .section-subtext-container {
      margin: 1rem;
      border-radius: 1rem;
      background-color: rgb(245, 245, 245);
      padding: 0.75rem;
    }
  }
}

#apply.main-content {
  max-width: none;
  margin: 0;
  padding: 2rem 10rem;
  padding-top: 0;
  background-color: rgb(245, 245, 245);

  h3.section-subtitle {
    font-size: 1.8rem;
    font-weight: bolder;
    color: #000050;
    margin-bottom: 0;
  }

  .section-text {
    width: 65%;

    h3.section-subtitle {
      font-size: 1.8rem;
      font-weight: bolder;
      color: #000050;
      margin-bottom: 0;
    }

    .section-subtext-container {
      margin: 1rem;
    }

  }
}

#contact.main-content {
  max-width: none;
  margin: 0;
  padding: 2rem 10rem;
  padding-top: 0;

  .section-container {
    margin-bottom: 0;
  }

  iframe {
    border-radius: 2rem;
  }

  img {
    border-radius: 2rem;
  }
}

div.home-text {
  color: #000050;
  font-size: 1.5rem;
  text-align: center;
  font-weight: bold;
}

.section-title {
  color: #000050;
  font-weight: bolder;
  font-size: 2.5rem;
  width: 100%;
  margin: 0;
  padding: 0.5rem;
  text-align: center;
  opacity: 1;
}

.section-container {
  display: flex;
  justify-content: space-evenly;
  margin-bottom: 2rem;
}

.highlight-icon-container {
  color: #000050;
  margin-right: 1rem;
  margin-left: 1rem;
  width: calc(100%/6);
  text-align: center;
  font-weight: bold;
}

div.section-text {
  color: #000050;
  font-size: 1rem;
  text-align: center;
  font-weight: bold;
  padding: 1rem;
}

.main-content h2 {
  color: #000050;
  font-weight: bolder;
  font-size: 3rem;
  width: 100%;
  margin: 0;
  padding: 0.5rem;
  text-align: center;
  opacity: 1;
}

img.logo {
  width: 7rem;
  margin-left: auto;
  margin-right: auto;
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

img.down-arrow {
  width: 6rem;
  margin-left: auto;
  margin-right: auto;
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

img.highlight-icon {
  width: 7rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

/* Navigation wrapper */

nav {
  padding-left: 37%;
  z-index: 2;
  overflow-y: hidden;
  display: inline;
}

.nav-menu {
  display: inline-block;
  padding: 0;
  margin: 0;
}

.nav-list-item {
  display: inherit;
  margin-left: 1rem;
}

a.nav-link:link, a.nav-link:visited {
  font-size: 1rem;
  color: white;
  text-decoration: none;
}

a.nav-link:hover, a.nav-link:active {
  color: grey;
}

